# msa-rct

./: .gitignore  .replit  CLAUDE.md  DOCUMENTO_PROJETO_TRIBUTAI.md  ONBOARDING.md  RPA_DELIVERY_REPORT.md  bcoDados.xlsx  credentials_template.json  drizzle.config.ts  econet_scraper.py  excel_helper.py  fix_ncm_status.py  generate-sqlite-migrations.bat  limpar_sessao_e_logar.py  login_interactive.py  mark_pending.py  package-lock.json  package.json  pyproject.toml  replit.md  reset_tributes.py  run_rpa.py  tailwind.config.ts  test_menu.py  test_menu_all.py  test_pis_cofins_click.py
.agents/: agent_assets_metadata.toml
.claude/: settings.local.json
.docs/: AdminLogin.tsx  RTC - Revisão da Classificação Tributária.txt  Requisitos.txt
.memory/: environment-setup.md  mvp-requirements.md
attached_assets/: Pasted--PRD-Projeto-TributAI-Vers-o-Consolidada-Vis-o-Geral-Nome-do-Projeto--1756229313575_1756229313577.txt  Pasted--Prisma-schema-para-o-Projeto-TributAI-Define-a-estrutura-de-entidades-essenciais-para-o-diagn-1756229328714_1756229328714.txt  Pasted-Ol-Replit-Estamos-finalizando-o-processo-de-migra-o-do-nosso-projeto-TributAI-cuja-de-1756907628262_1756907628263.txt
client/: index.html
migrations/: 0000_nasty_silver_centurion.sql
rpa_legal_intelligence/: __init__.py  alert_system.py  api_integration.py  config.py  database.py  demo_test.py  diff_engine.py  logger.py  main.py  portal_scraper.py  rpa_executor.py  scheduler.py  selenium_driver.py
rpa_ncm_scanner/: __main__.py  api_client.py  config.py  interpreter.py  main.py  scraper.py  session_cookies.json  (+1 more)
(+59 files in other folders)
