[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "lxml>=6.0.1",
    "playwright>=1.40.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "uvicorn>=0.35.0",
]
